--- a/VMSServer/Views/VMSView.xaml
+++ b/VMSServer/Views/VMSView.xaml
@@ -7,9 +7,19 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
             >
-    <DockPanel>
-        <TextBlock Text="VMS  Ip: " FontSize="30" Foreground="White" DockPanel.Dock="Top" HorizontalAlignment="Center" Margin="5" FontFamily="Monocraft"><Run Text="{Binding IP,Mode=OneWay}"></Run></TextBlock>
-        <ItemsControl Margin="20" ItemsSource="{Binding Mensajes}">
+    <Grid Background="#EFEFEF">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+         <!-- Cabecera -->
+        <StackPanel Grid.Row="0" Background="#333333">
+            <TextBlock Text="VMS" FontSize="30" Foreground="White" HorizontalAlignment="Center"/>
+            <TextBlock Text="{Binding IP, Mode=OneWay}" FontSize="20" Foreground="White" HorizontalAlignment="Center" Width="255" />
+        </StackPanel>
+    <!--<DockPanel>
+        <TextBlock Text="VMS  Ip: " FontSize="30" Foreground="White" DockPanel.Dock="Top" HorizontalAlignment="Center" Margin="5" FontFamily="Monocraft"><Run Text="{Binding IP,Mode=OneWay}"></Run></TextBlock>-->
+        <!--<ItemsControl Margin="20" ItemsSource="{Binding Mensajes}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel></StackPanel>
@@ -21,6 +31,21 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
             
+        </ItemsControl>-->
+    <ScrollViewer Grid.Row="1">
+        <ItemsControl Margin="20" ItemsSource="{Binding Mensajes}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel></StackPanel>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <local:MensajesView></local:MensajesView>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
         </ItemsControl>
-    </DockPanel>
+    </ScrollViewer>
+    <!--</DockPanel>-->
+    </Grid>
 </UserControl>
