--- a/VMSServer/Views/MensajesView.xaml
+++ b/VMSServer/Views/MensajesView.xaml
@@ -10,7 +10,7 @@
         <TextBlock Text="{Binding MensajeVMS}" TextAlignment="Center" FontWeight="Bold" FontSize="12" Height="20" Foreground="White" ></TextBlock>
     </StackPanel>-->
     <Border BorderBrush="Gray" BorderThickness="1" Background="#1E1E1E">
-        <TextBlock Text="{Binding MensajeVMS}" TextAlignment="Center" FontSize="24" Foreground="#FFA500" Margin="5">
+        <TextBlock Text="{Binding Mensaje}" TextAlignment="Center" FontSize="24" Foreground="#FFA500" Margin="5">
             <TextBlock.Effect>
                 <DropShadowEffect ShadowDepth="0" Color="#FFA500" BlurRadius="10"/>
             </TextBlock.Effect>
