--- a/VMSServer/Views/MensajesView.xaml
+++ b/VMSServer/Views/MensajesView.xaml
@@ -9,12 +9,35 @@
     <!--<StackPanel >
         <TextBlock Text="{Binding MensajeVMS}" TextAlignment="Center" FontWeight="Bold" FontSize="12" Height="20" Foreground="White" ></TextBlock>
     </StackPanel>-->
+    <UserControl.Resources>
+        <Style TargetType="TextBlock">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Parpadeo}" Value="True">
+                    <DataTrigger.EnterActions>
+                        <BeginStoryboard Name="StartAnimation">
+                            <Storyboard>
+                                <DoubleAnimation
+                  Storyboard.TargetProperty="Opacity"
+                  From="1.0" To="0.0" Duration="0:0:2"
+                  AutoReverse="True" RepeatBehavior="Forever" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </DataTrigger.EnterActions>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Parpadeo}" Value="False">
+                    <DataTrigger.EnterActions>
+                        <StopStoryboard BeginStoryboardName="StartAnimation" />
+                    </DataTrigger.EnterActions>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
     <Border BorderBrush="Gray" BorderThickness="1" Background="#1E1E1E">
         <TextBlock Text="{Binding Mensaje}" Name="Texto" TextAlignment="Center" FontSize="30" Foreground="#FFA500" Margin="5" VerticalAlignment="Center" TextWrapping="Wrap" FontFamily="ds-digital">
             <TextBlock.Effect>
                 <DropShadowEffect ShadowDepth="0" Color="#FFA500" BlurRadius="10"/>
             </TextBlock.Effect>
-            <TextBlock.Triggers>
+            <!--<TextBlock.Triggers>
                 <EventTrigger RoutedEvent="TextBlock.Loaded">
                     <BeginStoryboard>
                         <Storyboard>
@@ -25,7 +48,7 @@
                         </Storyboard>
                     </BeginStoryboard>
                 </EventTrigger>
-            </TextBlock.Triggers>
+            </TextBlock.Triggers>-->
         </TextBlock>
     </Border>
 </UserControl>
